Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21325

LSP: sourcegraph/go-langserver doesn't work

XMLWordPrintable

    • Linux/X11
    • 7a7dcc906416be7b746b32e55cef18c42cb25174 (qt-creator/qt-creator/4.8)

      Dependencies:

      export GOPATH=/home/user/go # the default location
      go get -u github.com/sourcegraph/go-langserver
      go get -u github.com/mdempsky/gocode

      Go version: 1.10

      Language client setings:

      Name: Go
      MIME: text/x-go
      Executable: /home/user/go/bin/go-langserver
      Arguments: -gocodecompletion

      Then edit any Go file whatsoever, completion doesn't work, error messages appear, originating in https://github.com/sourcegraph/go-langserver/blob/master/langserver/ast.go#L26

      I'm not entirely sure whom to blame here since it's weird that it wouldn't work at all like this.

        For Gerrit Dashboard: QTCREATORBUG-21325
        # Subject Branch Project Status CR V

            davschul David Schulz
            iptriz iptriz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes